# SKN21-FINAL-2Team

./: .gitignore  README.md  crowling_test.ipynb  database_plan.md  docker-compose-local-full.yml  docker-compose-local.yml  docker-compose.yml  env.example  i18n-implementation-plan.md  package-lock.json  requirements.txt  service_proposal.md  요구사항 정의서 3191d863dfe0813bb04be3ce129ffd9a.csv
backend/: .env.example  Dockerfile  alembic.ini  check_db.py  debug_env.py  delete_scripts.py  direct_update.py  pyproject.toml  requirements.txt  tmp_check_all_keys.py  tmp_check_qdrant.py  tmp_check_qdrant_subcat.py  tmp_check_restaurants.py  tmp_check_specifics.py  tmp_check_vectordb.py  verify_apis.py
backend/alembic/: env.py
backend/app/: main.py
backend/data/: 12_관광지.jsonl  12_관광지_enriched.jsonl  14_문화시설.jsonl  14_문화시설_enriched.jsonl  15_축제공연행사.jsonl  15_축제공연행사_enriched.jsonl  25_여행코스.jsonl  28_레포츠.jsonl  28_레포츠_enriched.jsonl  32_숙박.jsonl  32_숙박_enriched.jsonl  39_음식점.jsonl  39_음식점_enriched.jsonl  39_음식점_enriched_image_filled.jsonl  99_팝업스토어.json  KON040238_place_sections copy.jsonl  KON040238_place_sections.jsonl  convert_sheet.py  geocode_cache.json  hot_places.json  preprocess_popup.py  reclean_popup.py  tour.jsonl  visitkorea_data.json  visitkorea_kculture.jsonl  visitkorea_tour.jsonl  visitseoul_hallyu_area8.jsonl  visitseoul_hallyu_area8_deduped.jsonl  visitseoul_hallyu_area8_map_report.json  visitseoul_hallyu_area8_raw.json  visitseoul_hallyu_places_demo.jsonl  visitseoul_hallyu_places_demo_raw.json
backend/evaluation/: eval_ragas.py  evaluate_all.py  (+11 more)
(+391 files in other folders)
